--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.0"
+        "bootstrap": "^5.3.0",
+        "vercel-php-runtime": "^0.1.1"
     }
 }
